# A8PicoCart

./: .gitignore  README.md
Atari Boot ROM/: A8PicoCart.asm  convert.bat
Cartridge Shell Files/: a8pico_back.stl  a8pico_front.scad
PCB Kicad Files/XE version (no case)/: A8PicoCart.kicad_pcb
PCB Kicad Files/XL or XE version (fits case)/: A8PicoCart.kicad_sch
Pico VSCode Project/a8_pico_cart/: atari_cart.c  atari_cart.h  fatfs_disk.c  main.c  msc_disk.c  osrom.h  rom.h
cartridge shell 3d print files/: Makefile  a8pico.scad  a8pico_back_v2.scad  a8pico_back_v2.stl  a8pico_dimensions.scad  a8pico_front.scad  a8pico_front.stl  a8pico_logo.stl  cube_round.scad
cartridge shell 3d print files/Previous Versions/: a8pico_back.scad
firmware/: a8_pico_cart.uf2
pcbs/Previous Versions/XL or XE version (fits case)/: A8PicoCart.kicad_pcb  A8PicoCart.kicad_pro
pcbs/XE version (no case)/: A8PicoCart.kicad_sch
pcbs/XL or XE version (fits case)/: A8PicoCart.kicad_prl  README.md
source/Pico VSCode Project/a8_pico_cart/: CMakeLists.txt  atari_cart.c  fatfs_disk.h  flash_fs.c  flash_fs.h  myboard.h  usb_descriptors.c
source/Pico VSCode Project/a8_pico_cart/fatfs/: diskio.c  ffconf.h
